--- a/app/features/Details/NewChannel/newchannel.view.html
+++ b/app/features/Details/NewChannel/newchannel.view.html
@@ -181,7 +181,7 @@
                                     </div>
                                 </div>
 
-                                <div class="row">
+                                <div class="row margin-top-20px">
                                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12" ng-if="newchannel.new_channel.orari_specifici">
                                         <div class="row">
                                             <div class="col-lg-1 col-sm-1 col-md-1 col-xs-1 width-60px">
@@ -209,39 +209,39 @@
                                                 <cs-flag
                                                         class="my-flag-validation"
                                                         flag-show-info="false"
-                                                        flag-selected="day.flag"
+                                                        flag-selected="day.open"
                                                         flag-string=""></cs-flag>
                                             </div>
                                             <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3 border-bottom-grey new-channel-day">
                                                 <p class="font-small font-medium color-black">{{day.label}}</p>
                                             </div>
                                             <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
-                                                <ui-select class="community-ui-select table-day-text" ng-model="contenuti.channelSelected">
-                                                    <ui-select-match placeholder="Seleziona...">{{$select.selected.ds_name}}</ui-select-match>
+                                                <ui-select class="community-ui-select table-day-text" ng-model="day.morning.start">
+                                                    <ui-select-match placeholder="Seleziona...">{{$select.selected}}</ui-select-match>
                                                     <ui-select-choices repeat="h in newchannel.hours | filter: $select.search track by $index">
                                                         <span ng-bind="h"></span>
                                                     </ui-select-choices>
                                                 </ui-select>
                                             </div>
                                             <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
-                                                <ui-select class="community-ui-select table-day-text" ng-model="contenuti.channelSelected">
-                                                    <ui-select-match placeholder="Seleziona...">{{$select.selected.ds_name}}</ui-select-match>
+                                                <ui-select class="community-ui-select table-day-text" ng-model="day.morning.end">
+                                                    <ui-select-match placeholder="Seleziona...">{{$select.selected}}</ui-select-match>
                                                     <ui-select-choices repeat="h in newchannel.hours | filter: $select.search track by $index">
                                                         <span ng-bind="h"></span>
                                                     </ui-select-choices>
                                                 </ui-select>
                                             </div>
                                             <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
-                                                <ui-select class="community-ui-select table-day-text" ng-model="contenuti.channelSelected">
-                                                    <ui-select-match placeholder="Seleziona...">{{$select.selected.ds_name}}</ui-select-match>
+                                                <ui-select class="community-ui-select table-day-text" ng-model="day.afternoon.start">
+                                                    <ui-select-match placeholder="Seleziona...">{{$select.selected}}</ui-select-match>
                                                     <ui-select-choices repeat="h in newchannel.hours | filter: $select.search track by $index">
                                                         <span ng-bind="h"></span>
                                                     </ui-select-choices>
                                                 </ui-select>
                                             </div>
                                             <div class="col-lg-2 col-sm-2 col-md-2 col-xs-2">
-                                                <ui-select class="community-ui-select table-day-text" ng-model="contenuti.channelSelected">
-                                                    <ui-select-match placeholder="Seleziona...">{{$select.selected.ds_name}}</ui-select-match>
+                                                <ui-select class="community-ui-select table-day-text" ng-model="day.afternoon.end">
+                                                    <ui-select-match placeholder="Seleziona...">{{$select.selected}}</ui-select-match>
                                                     <ui-select-choices repeat="h in newchannel.hours | filter: $select.search track by $index">
                                                         <span ng-bind="h"></span>
                                                     </ui-select-choices>
