--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css" rel="stylesheet">
         <link href="app/libs/animate.css/animate.min.css" rel="stylesheet">
         <link rel="stylesheet" href="app/libs/angular-material/angular-material.css">
+        <link rel="stylesheet" href="app/libs/angular-toastr/dist/angular-toastr.css" />
         <!-- Custom styles for this template -->
         <link href="app/assets/css/main.css" rel="stylesheet">
 
@@ -71,6 +72,8 @@
         <script type="text/javascript" src="app/libs/angular-animate/angular-animate.min.js"></script>
         <script type="text/javascript" src="app/libs/angular-material/angular-material.js"></script>
         <script type="text/javascript" src="app/libs/moment/moment.js"></script>
+        <script type="text/javascript" src="app/libs/angular-toastr/dist/angular-toastr.tpls.js"></script>
+
         <!-- APP -->
         <script type="text/javascript" src="app/config.js"></script>
         <script type="text/javascript" src="app/app.js"></script>
