--- a/app/features/Details/NewChannel/newchannel.view.html
+++ b/app/features/Details/NewChannel/newchannel.view.html
@@ -85,9 +85,10 @@
                                 <!-------- END --------->
                                 <div class="row border-bottom-grey" style="margin-top: 70px">
                                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 container-modifier">
-                                        <button class="btn btn-info btn-delete-settings">ELIMINA</button>
-                                        <button class="btn btn-info btn-block-settings">BLOCCA</button>
-                                        <button class="btn btn-info btn-save-settings">SALVA</button>
+                                        <button ng-if="!newchannel.new_channel.isNew"  ladda="newchannel.options.deleteWorking" class="btn btn-info btn-delete-settings">ELIMINA</button>
+                                        <button ng-if="newchannel.new_channel.isNew" class="btn btn-info btn-delete-settings">ANNULLA</button>
+                                        <button ng-if="!newchannel.new_channel.isNew" class="btn btn-info btn-block-settings">BLOCCA</button>
+                                        <button class="btn btn-info btn-save-settings" ladda="newchannel.options.saveWorking" ng-click="newchannel.save()">SALVA</button>
                                     </div>
                                 </div>
 
@@ -143,9 +144,10 @@
                                 <!-------- END --------->
                                 <div class="row border-bottom-grey" style="margin-top: 70px">
                                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 container-modifier">
-                                        <button class="btn btn-info btn-delete-settings">ELIMINA</button>
-                                        <button class="btn btn-info btn-block-settings">BLOCCA</button>
-                                        <button class="btn btn-info btn-save-settings">SALVA</button>
+                                        <button ng-if="!newchannel.new_channel.isNew"  ladda="newchannel.options.deleteWorking" class="btn btn-info btn-delete-settings">ELIMINA</button>
+                                        <button ng-if="newchannel.new_channel.isNew" class="btn btn-info btn-delete-settings">ANNULLA</button>
+                                        <button ng-if="!newchannel.new_channel.isNew" class="btn btn-info btn-block-settings">BLOCCA</button>
+                                        <button class="btn btn-info btn-save-settings" ladda="newchannel.options.saveWorking" ng-click="newchannel.save()">SALVA</button>
                                     </div>
                                 </div>
 
@@ -255,9 +257,10 @@
                                 <!-------- END --------->
                                 <div class="row border-bottom-grey" style="margin-top: 70px">
                                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 container-modifier">
-                                        <button class="btn btn-info btn-delete-settings">ELIMINA</button>
-                                        <button class="btn btn-info btn-block-settings">BLOCCA</button>
-                                        <button class="btn btn-info btn-save-settings">SALVA</button>
+                                        <button ng-if="!newchannel.new_channel.isNew"  ladda="newchannel.options.deleteWorking" class="btn btn-info btn-delete-settings">ELIMINA</button>
+                                        <button ng-if="newchannel.new_channel.isNew" class="btn btn-info btn-delete-settings">ANNULLA</button>
+                                        <button ng-if="!newchannel.new_channel.isNew" class="btn btn-info btn-block-settings">BLOCCA</button>
+                                        <button class="btn btn-info btn-save-settings" ladda="newchannel.options.saveWorking" ng-click="newchannel.save()">SALVA</button>
                                     </div>
                                 </div>
 
