added warning color

--- a/app/features/Details/NewChannel/newchannel.view.html
+++ b/app/features/Details/NewChannel/newchannel.view.html
@@ -16,7 +16,7 @@
                 <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12">
                     <div class="form-group row border-bottom-grey">
                         <p class="font-small color-grey" for="name_new_channel">NOME CANALE</p>
-                        <input class="form-control new-channel-name color-day-text-grey" placeholder="Nome del canale" id="name_new_channel" type="text">
+                        <input class="form-control new-channel-name"  ng-model="newchannel.new_channel.name" placeholder="Nome del canale" id="name_new_channel" type="text">
                     </div>
                 </div>
             </div>
