--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link href="app/libs/animate.css/animate.min.css" rel="stylesheet">
         <link rel="stylesheet" href="app/libs/angular-material/angular-material.css">
         <link rel="stylesheet" href="app/libs/angular-toastr/dist/angular-toastr.css" />
+        <link rel="stylesheet" type="text/css" href="app/libs/trix/dist/trix.css">
         <!-- Custom styles for this template -->
         <link href="app/assets/css/main.css" rel="stylesheet">
 
@@ -73,7 +74,8 @@
         <script type="text/javascript" src="app/libs/angular-material/angular-material.js"></script>
         <script type="text/javascript" src="app/libs/moment/moment.js"></script>
         <script type="text/javascript" src="app/libs/angular-toastr/dist/angular-toastr.tpls.js"></script>
-
+        <script type="text/javascript" src="app/libs/trix/dist/trix.js"></script>
+        <script type="text/javascript" src="app/libs/angular-trix/dist/angular-trix.min.js"></script>
         <!-- APP -->
         <script type="text/javascript" src="app/config.js"></script>
         <script type="text/javascript" src="app/app.js"></script>
