--- a/index.html
+++ b/index.html
@@ -95,6 +95,9 @@
         <script type="text/javascript" src="app/services/category.service.js"></script>
         <script type="text/javascript" src="app/services/edizioni.service.js"></script>
 
+        <!-------- UTILS -------->
+        <script type="text/javascript" src="app/utils/util.service.js"></script>
+
         <!-- COMPONENTS -->
         <script type="text/javascript" src="app/components/flag/flag.directive.js"></script>
 
