--- a/app/features/Details/NewChannel/newchannel.view.html
+++ b/app/features/Details/NewChannel/newchannel.view.html
@@ -85,10 +85,10 @@
                                 <!-------- END --------->
                                 <div class="row border-bottom-grey" style="margin-top: 70px">
                                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 container-modifier">
-                                        <button ng-if="!newchannel.new_channel.isNew"  ladda="newchannel.options.deleteWorking" class="btn btn-info btn-delete-settings">ELIMINA</button>
+                                        <button ng-if="!newchannel.new_channel.isNew"  ladda="newchannel.options.deleteWorking()" class="btn btn-info btn-delete-settings">ELIMINA</button>
                                         <button ng-if="newchannel.new_channel.isNew" class="btn btn-info btn-delete-settings">ANNULLA</button>
                                         <button ng-if="!newchannel.new_channel.isNew" class="btn btn-info btn-block-settings">BLOCCA</button>
-                                        <button class="btn btn-info btn-save-settings" ladda="newchannel.options.saveWorking" ng-click="newchannel.save()">SALVA</button>
+                                        <button class="btn btn-info btn-save-settings" ladda="newchannel.options.saveWorking()" ng-click="newchannel.save()">SALVA</button>
                                     </div>
                                 </div>
 
@@ -116,7 +116,7 @@
                                     <div class="col-lg-6 col-sm-6 col-md-6 col-xs-6">
                                         <div class="border-bottom-grey">
                                             <p class="font-small color-grey">INDIRIZZO</p>
-                                            <input class="form-control new-channel-author table-day-text" placeholder="Indirizzo" type="text">
+                                            <input class="form-control new-channel-author table-day-text" placeholder="Indirizzo" ng-model="newchannel.new_channel.address" type="text">
                                         </div>
                                     </div>
                                 </div>
@@ -124,19 +124,19 @@
                                     <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
                                         <div class="border-bottom-grey">
                                             <p class="font-small color-grey">TELEFONO</p>
-                                            <input class="form-control new-channel-author table-day-text" placeholder="Telefono" type="text">
+                                            <input class="form-control new-channel-author table-day-text" placeholder="Telefono" ng-model="newchannel.new_channel.phone" type="text">
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
                                         <div class="border-bottom-grey">
                                             <p class="font-small color-grey">EMAIL</p>
-                                            <input class="form-control new-channel-author table-day-text" placeholder="Email" type="email">
+                                            <input class="form-control new-channel-author table-day-text" placeholder="Email" ng-model="newchannel.new_channel.email" type="email">
                                         </div>
                                     </div>
                                     <div class="col-lg-3 col-sm-3 col-md-3 col-xs-3">
                                         <div class="border-bottom-grey">
                                             <p class="font-small color-grey">SITO INTERNET</p>
-                                            <input class="form-control new-channel-author table-day-text" placeholder="Sito internet" type="text">
+                                            <input class="form-control new-channel-author table-day-text" placeholder="Sito internet" ng-model="newchannel.new_channel.website" type="text">
                                         </div>
                                     </div>
                                 </div>
@@ -144,10 +144,10 @@
                                 <!-------- END --------->
                                 <div class="row border-bottom-grey" style="margin-top: 70px">
                                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 container-modifier">
-                                        <button ng-if="!newchannel.new_channel.isNew"  ladda="newchannel.options.deleteWorking" class="btn btn-info btn-delete-settings">ELIMINA</button>
+                                        <button ng-if="!newchannel.new_channel.isNew"  ladda="newchannel.options.deleteWorking()" class="btn btn-info btn-delete-settings">ELIMINA</button>
                                         <button ng-if="newchannel.new_channel.isNew" class="btn btn-info btn-delete-settings">ANNULLA</button>
                                         <button ng-if="!newchannel.new_channel.isNew" class="btn btn-info btn-block-settings">BLOCCA</button>
-                                        <button class="btn btn-info btn-save-settings" ladda="newchannel.options.saveWorking" ng-click="newchannel.save()">SALVA</button>
+                                        <button class="btn btn-info btn-save-settings" ladda="newchannel.options.saveWorking()" ng-click="newchannel.save()">SALVA</button>
                                     </div>
                                 </div>
 
@@ -257,10 +257,10 @@
                                 <!-------- END --------->
                                 <div class="row border-bottom-grey" style="margin-top: 70px">
                                     <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 container-modifier">
-                                        <button ng-if="!newchannel.new_channel.isNew"  ladda="newchannel.options.deleteWorking" class="btn btn-info btn-delete-settings">ELIMINA</button>
+                                        <button ng-if="!newchannel.new_channel.isNew"  ladda="newchannel.options.deleteWorking()" class="btn btn-info btn-delete-settings">ELIMINA</button>
                                         <button ng-if="newchannel.new_channel.isNew" class="btn btn-info btn-delete-settings">ANNULLA</button>
                                         <button ng-if="!newchannel.new_channel.isNew" class="btn btn-info btn-block-settings">BLOCCA</button>
-                                        <button class="btn btn-info btn-save-settings" ladda="newchannel.options.saveWorking" ng-click="newchannel.save()">SALVA</button>
+                                        <button class="btn btn-info btn-save-settings" ladda="newchannel.options.saveWorking()" ng-click="newchannel.save()">SALVA</button>
                                     </div>
                                 </div>
 
@@ -291,6 +291,16 @@
                                     </div>
                                     <div class="col-lg-6 col-sm-6 col-md-3 col-xs-3"></div>
                                 </div>
+
+                                <div class="row border-bottom-grey" style="margin-top: 70px">
+                                    <div class="col-lg-12 col-sm-12 col-md-12 col-xs-12 container-modifier">
+                                        <button ng-if="!newchannel.new_channel.isNew"  ladda="newchannel.options.deleteWorking()" class="btn btn-info btn-delete-settings">ELIMINA</button>
+                                        <button ng-if="newchannel.new_channel.isNew" class="btn btn-info btn-delete-settings">ANNULLA</button>
+                                        <button ng-if="!newchannel.new_channel.isNew" class="btn btn-info btn-block-settings">BLOCCA</button>
+                                        <button class="btn btn-info btn-save-settings" ladda="newchannel.options.saveWorking()" ng-click="newchannel.save()">SALVA</button>
+                                    </div>
+                                </div>
+
                             </uib-tab-body>
                         </uib-tab>
                     </uib-tabset>
